# SSAD-tasks

./: .gitignore  README.md
Adapter/: CMakeLists.txt  TurkeyAdapter.cpp  TurkeyAdapter.h  main.cpp
Adapter/Duck/: Duck.cpp  Duck.h  MallardDuck.cpp  MallardDuck.h
Adapter/Turkey/: Turkey.cpp  Turkey.h  WildTurkey.cpp  WildTurkey.h
Decorator/: CMakeLists.txt  Text.cpp  Text.h  TextView.cpp  TextView.h  main.cpp
Decorator/Decorator/: BorderDecorator.cpp  BorderDecorator.h  TitleDecorator.cpp  TitleDecorator.h
Singleton/: CMakeLists.txt  SingletonLoad.cpp  SingletonLoad.h  main.cpp
Strategy/: CMakeLists.txt  main.cpp
Strategy/DiveBehavior/: DiveBehavior.cpp  DiveBehavior.h  DiveNoWay.cpp  DiveNoWay.h  DiveWithTail.cpp  DiveWithTail.h
Strategy/Duck/: Duck.cpp  Duck.h  MallardDuck.cpp  MallardDuck.h
Strategy/FlyBehavior/: FlyBehavior.cpp  FlyBehavior.h  FlyNoWay.cpp  FlyNoWay.h  FlyWithWings.cpp  FlyWithWings.h
Strategy/QuackBehavior/: MuteSqueak.cpp  MuteSqueak.h  QuackBehavior.cpp  QuackBehavior.h  Quacking.cpp  Quacking.h  Squeak.cpp  Squeak.h
